Closed Bug 608636 Opened 14 years ago Closed 14 years ago

BasicLayers renders transformed opaque elements incorrectly

Categories

(Core :: Graphics, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- final+

People

(Reporter: roc, Assigned: roc)

Details

Attachments

(2 files, 1 obsolete file)

Attached file testcase (obsolete) —
See attached testcase in a build with acceleration disabled.
Assignee: nobody → roc
blocking2.0: --- → final+
Attached file correct test
Oops, attached the wrong test file.
Attachment #487259 - Attachment is obsolete: true
Easy fix.

The test is a bit elaborate because the edges of the container layer are antialiased differently in the test vs reference, so I covered them up with another element.
Attachment #487276 - Flags: review?(vladimir)
Whiteboard: [needs landing]
http://hg.mozilla.org/mozilla-central/rev/25b3b51ca9ee
(I fixed the test failure before checking in)
Status: NEW → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [needs landing]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: