Bug 608636. Clip to transformed bounds of BasicContainerLayers when compositing their opacity groups back to the target surface. r=vlad,a=blocking